src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  scroll-behavior: smooth;
  box-sizing: border-box;
}

body {
  color: rgb(63 63 70);
  background-color: black
}

/* :focus {
  outline: 4px solid rgb(161 161 170);
  outline-offset: 4px;
} */

:focus {
  outline: none;
}

